@@ -1,5 +1,6 @@
 2000-07-24  Martin Baulig  <baulig@suse.de>
 
+	* autogen.sh: Make it work with AM_GNOME2_GETTEXT.
 	* check-utmp.m4: New file.
 
 2000-07-24  Martin Baulig  <baulig@suse.de>
